Issue 83 : CSS overflow bug fix

--- a/cowebx-apps/src/main/webapp/dailyscrum/application.css
+++ b/cowebx-apps/src/main/webapp/dailyscrum/application.css
@@ -104,6 +104,7 @@ html, body {
 	color:grey;
 	text-align:center;
 	overflow:hidden;
+	background-color:rgb(197, 204, 211);
 }
 
 .dailyscrum_inactive{
